# mcquack_flatbuffer

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
cmake/: flags.cmake  gtest.cmake  options.cmake
include/mcquack_flatbuffer/: dynamic_flatbuffer.hpp
test/: CMakeLists.txt  FlatBufferTests.cpp
